# srpc

./: .gitignore  CMakeLists.txt  README.md
examples/: calculator.contract  calculator_srpc.cpp
include/srpc/: core.hpp  element.hpp  generator.hpp  packer.hpp  parser.hpp  server.hpp  token.hpp  transport.hpp
src/: CMakeLists.txt  generate_srpc.cpp
src/srpc/: core.hpp  generator.hpp  lexer.hpp  packer.hpp  parser.hpp  rpc_element.hpp  serializer.hpp  server.hpp  token.hpp  trace.hpp  transport.hpp
tests/: CMakeLists.txt  e2e_test.cpp  generator_test.cpp  lexer.cpp  lexer_test.cpp  packer_test.cpp  parser_test.cpp  serializer_test.cpp  server_test.cpp  transport_test.cpp
